--- a/ODS/html_src/Product/product_veggies.html
+++ b/ODS/html_src/Product/product_veggies.html
@@ -102,7 +102,7 @@
                             </td>
                             {% endfor %}
                             <td>
-                                <input id="quantity" name="quantity[]" size="5" style="text-align: right" type="text" value="0">
+                                <input id="quantity" name="quantity[]" size="5" style="text-align: right" type="number" min="0" max="5" value="0">
                             </td>
                         </tr>
                         {% endfor %}
@@ -121,3 +121,4 @@
 </main>
 </body>
 </html>
+
